--- a/frontend/view.css
+++ b/frontend/view.css
@@ -2,6 +2,8 @@
 
 body {
     font-family: Arial, sans-serif;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 .navbar {
@@ -29,7 +31,7 @@ body {
     float: right;
     width: 170px;
     margin-top: 10px;
-    margin-right: 0px;
+    margin-right: 10px;
 }
 .container {
     max-width: 800px;
